degrade methods from Java11 to Java8